<resources>
    <string name="base_act_network_no">亲，当前网络不给力!</string>
    <string name="base_my_title">我是标题</string>
    <string name="base_my_control">控制</string>
    <string name="app_name">前置仓</string>
    <string name="app_use_notice">在使用前,请先使用Pda扫描仪扫描!</string>
    <string name="but_login">登录</string>
    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="tv_login_username">账号</string>
    <string name="tv_login_password">密码</string>
    <string name="toast_username_password_error">用户名或密码有误</string>
    <string name="toast_data_loading">加载中……</string>
    <string name="toast_login_success">登录成功</string>
    <string name="tv_title_login">前置仓App登录</string>
    <string name="tv_title_main_page">前置仓App首页</string>
    <string name="tv_title_goods_onSale">前置仓App商品上架</string>
    <string name="but_scan_goods">扫描商品</string>
    <string name="but_goods_onSale">商品上架</string>
    <string name="toast_scan_goods_error">扫描失败,请再次尝试!</string>
    <string name="toast_onSale_success">商品上架成功!</string>
    <string name="toast_scan_goods_success">扫描商品成功!</string>
    <string name="toast_scan_goods_result">扫描结果为:</string>
    <string name="but_goods_offSale">商品下架</string>
    <string name="but_loc_goods">获取商品位置</string>
    <string name="but_search_stock">库存查询</string>
    <string name="hint_show_result">显示查询结果</string>
    <string name="tv_title_goods_offSale">前置仓App订单下架</string>
    <string name="toast_offSale_success">商品下架成功!</string>
    <string name="toast_check_goods_info_success">查询商品信息成功!</string>
    <string name="tv_scan_result">扫描结果</string>
    <string name="tv_goods_num">商品编码</string>
    <string name="tv_actual_qty">实际库存</string>
    <string name="tv_useful_qty">可用库存</string>
    <string name="tv_title_warehouse_search">前置仓App库存查询</string>
    <string name="tv_scan_goods_name">商品名称</string>
    <string name="tv_scan_goods_num">商品数量</string>
    <string name="tv_current_warehouse_num">当前库存</string>
    <string name="hint_input_goods_num">请输入商品数量……</string>
    <string name="toast_goods_num_not_null">请扫描正确的我厨商品编码……</string>
    <string name="but_goods_lose">商品报损</string>
    <string name="tv_current_warehouse">当前仓库</string>
    <string name="tv_object_warehouse">目标仓库</string>
    <string name="but_confirm_transfer_goods">确认转仓下架</string>
    <string name="but_confirm_transfer_on_goods">确认转仓上架</string>
    <string name="but_confirm_transfer_on_goods_success">转仓上架成功!</string>
    <string name="tv_title_transfer">前置仓App转仓下架</string>
    <string name="tv_goods_from">商品来源</string>
    <string name="tv_title_transfer_on">前置仓App转仓上架</string>
    <string name="tv_onhelves_type">上架类型</string>
    <string name="tv_offhelves_type">下架类型</string>
    <string name="tv_title_onhelves">上架</string>
    <string name="tv_title_thrid_search">第三方订单下架</string>
    <string name="tv_title_goods_chaeck_search">库存盘点</string>
    <string name="toast_goods_num_not_right">商品条码不正确!</string>
    <string name="toast_transfer_offShelves_success">转仓下架成功!</string>
    <string name="but_get_transfer_code">获取转仓码</string>
    <string name="hint_input_transfer_code">请输入转仓码……</string>
    <string name="tv_transfer_code">转仓码列表</string>
    <string name="tv_scan_goods_unit">单位</string>
    <string name="goods_num">数量</string>
    <string name="toast_but_click_goods_empty">请扫描商品条码...</string>
    <string name="toast_but_click_order_empty">请扫描订单编码...</string>
    <string name="toast_please_scan_goodscode_before">请先扫描订单!</string>
    <string name="toast_order_has_off_shelf">此订单已经下架,不可扫描!</string>
    <string name="data_error">数据错误!</string>
    <string name="toast_but_click_goods_selected">请先选择上架商品!</string>
    <string name="toast_order_has_cancel_shelf">此订单已取消，不可扫描!</string>
</resources>
