<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar_layout" />

    <include layout="@layout/common_notice_use_scan_layout" />

    <Button
        android:id="@+id/but_scan_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_scan_goods" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_scan_result" />

        <TextView
            android:id="@+id/tv_search_result"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_scan_goods_name" />

        <TextView
            android:id="@+id/tv_goods_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_scan_goods_num" />

        <EditText
            android:id="@+id/et_scan_goods_num"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/hint_input_goods_num"
            android:inputType="number"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/but_goods_onSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_goods_onSale" />
</LinearLayout>